--- a/style.css
+++ b/style.css
@@ -59,11 +59,12 @@ line-height: 26px;
   ul li:before {
     content: '✓';
     color: green;
+    font-family: sans-serif;
     
   }
 .failure-p{
     color:  #444343;
-font-family: Work Sans;
+font-family: sans-serif;
 margin-top: 24px;
 margin-bottom: 16px;
 font-size: 16px;
@@ -71,3 +72,22 @@ font-style: normal;
 font-weight: 400;
 line-height: 26px;
 }  
+
+h3{
+    color: #151414;
+text-align: center;
+font-family: Work Sans;
+font-size: 30px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.p{
+    color: #737272;
+text-align: center;
+font-family: sans-serif;
+font-size: 25px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
